src/test/ui/issue-3779.stderr
error[E0072]: recursive type `S` has infinite size
  --> $DIR/issue-3779.rs:11:1
   |
11 | struct S {
   | ^^^^^^^^ recursive type has infinite size
12 |     //~^ ERROR E0072
13 |     element: Option<S>
   |     ------------------ recursive without indirection
   |
   = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `S` representable

error: aborting due to previous error

